--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "topthink/think-orm": "^2.0",
         "topthink/think-view": "^1.0",
         "phpmailer/phpmailer": "^6.1",
-        "topthink/think-multi-app": "^1.0"
+        "topthink/think-multi-app": "^1.0",
+        "symfony/polyfill-mbstring": "^1.26.0",
+        "friendsofphp/php-cs-fixer": "v3.4.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
